Use valid category in library.properties
The previous category value caused the warning:

WARNING: Category 'Sensors.' in library MQ5Sensor is not valid. Setting to 'Uncategorized'

List of valid category values:
https://github.com/arduino/Arduino/wiki/Arduino-IDE-1.5:-Library-specification#libraryproperties-file-format

--- a/library.properties
+++ b/library.properties
@@ -4,7 +4,7 @@ author=thiminhnhut <thiminhnhut@gmail.com>
 maintainer=thiminhnhut <thiminhnhut@gmail.com>
 sentence=MQ5 Sensor for Arduino, ESP8266.
 paragraph=MQ5 Sensor for Arduino, ESP8266.
-category=Sensors.
+category=Sensors
 url=https://github.com/thiminhnhut/sensor-mq5-arduino
 architectures=*
 includes=MQ5Sensor.h
